processed/jira/txt/LU/LU-12276.txt
Key:        LU-12276
Summary:    Lustre client compilation failing on CentOS 7.6 + MOFED 4.6
Link:       https://jira.whamcloud.com/browse/LU-12276
Type:       Bug
Priority:   Major
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Thu, 9 May 2019 07:54:28 +0000
Updated:    Fri, 7 Jun 2019 12:52:43 +0000
Resolved:   Thu, 9 May 2019 19:46:15 +0000

--- Description ---
Type 'make' to build Lustre.

+ make -j2 -s

Making all in .

/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c: In function 'kiblnd_post_rx':

/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c:206:2: error: passing argument 3 of 'ib_post_recv' from incompatible pointer type [-Werror]

  rc = ib_post_recv(conn->ibc_cmid->qp, &rx->rx_wrq, &bad_wrq);

  ^

In file included from /root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/ib_addr.h:48:0,

                 from /root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/rdma_cm.h:39,

                 from /tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd.h:75,

                 from /tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c:37:

/root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/ib_verbs.h:3758:19: note: expected 'const struct ib_recv_wr **' but argument is of type 'struct ib_recv_wr **'

 static inline int ib_post_recv(struct ib_qp *qp,

                   ^

/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c: In function 'kiblnd_post_tx_locked':

/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c:977:4: error: passing argument 3 of 'ib_post_send' from incompatible pointer type [-Werror]

    rc = ib_post_send(conn->ibc_cmid->qp, wr, &bad);

    ^

In file included from /root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/ib_addr.h:48:0,

                 from /root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/rdma_cm.h:39,

                 from /tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd.h:75,

                 from /tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c:37:

/root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/ib_verbs.h:3741:19: note: expected 'const struct ib_send_wr **' but argument is of type 'struct ib_send_wr **'

 static inline int ib_post_send(struct ib_qp *qp,

                   ^

/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c: At top level:

cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]

cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]

cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

cc1: all warnings being treated as errors

--- Comment (gerrit, Sat, 11 May 2019 19:23:38 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/34841/

Subject: LU-12276 lnet: check const parameters for ib_post_send and ib_post_recv

Project: fs/lustre-release

Branch: b2_10

Current Patch Set: 

Commit: cbaaa6a607eca46f95351067dc0eebf38da73ba6

--- Comment (gerrit, Fri, 10 May 2019 21:03:38 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/34840/

Subject: LU-12276 lnet: check const parameters for ib_post_send and ib_post_recv

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 

Commit: 672e85cfb90746349a544264d648612a1a7c8e49

--- Comment (gerrit, Thu, 9 May 2019 21:02:18 +0000) ---
Jian Yu (yujian@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/34841

Subject: LU-12276 lnet: check const parameters for ib_post_send and ib_post_recv

Project: fs/lustre-release

Branch: b2_10

Current Patch Set: 1

Commit: 27c4395dc8988cbbc7aad03f5a1f941b457936e1

--- Comment (gerrit, Thu, 9 May 2019 20:55:41 +0000) ---
Jian Yu (yujian@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/34840

Subject: LU-12276 lnet: check const parameters for ib_post_send and ib_post_recv

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 1

Commit: cb75a635fda0836ca54eee9353a6bfb2da11383d

--- Comment (pjones, Thu, 9 May 2019 19:46:15 +0000) ---
Landed for 2.13

--- Comment (gerrit, Thu, 9 May 2019 19:28:08 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/34837/

Subject: LU-12276 lnet: check const parameters for ib_post_send and ib_post_recv

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: eb4f04e89fecbf6525f00288dbf26487f47103ba

--- Comment (gerrit, Thu, 9 May 2019 08:04:43 +0000) ---
Jian Yu (yujian@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/34837

Subject: LU-12276 lnet: check const parameters for ib_post_send and ib_post_recv

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: eea498951b96faf9b33e3170bc5ac63530cd8f9a
